--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/movies.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -18,7 +18,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>Movie Land Club</title>
   </head>
   <body>
     <div id="root"></div>
